WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144473
Should choose UIScrollView indicatorStyle based on the document background color
https://bugs.webkit.org/show_bug.cgi?id=144473
Summary
Should choose UIScrollView indicatorStyle based on the document background color
Beth Dakin
Reported
2015-04-30 14:42:03 PDT
Should choose UIScrollView indicatorStyle based on the document background color
rdar://problem/19897699
Attachments
Patch
(3.06 KB, patch)
2015-04-30 14:45 PDT
,
Beth Dakin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2015-04-30 14:45:45 PDT
Created
attachment 252092
[details]
Patch
WebKit Commit Bot
Comment 2
2015-04-30 14:48:38 PDT
Attachment 252092
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/Color.h:119: The parameter name "l" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Beth Dakin
Comment 3
2015-04-30 15:08:17 PDT
Thanks Simon!
http://trac.webkit.org/changeset/183645
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug