Should choose UIScrollView indicatorStyle based on the document background color https://bugs.webkit.org/show_bug.cgi?id=144473 -and corresponding- rdar://problem/19897699

Reviewed by Simon Fraser.

Source/WebCore:

Export this function.
* platform/graphics/Color.h:

Source/WebKit2:

Update the indicator style whenever the background color changes.
* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _updateScrollViewBackground]):



Canonical link: https://commits.webkit.org/162483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183645 268f45cc-cd09-0410-ab3c-d52691b4dbfc