Source/WebCore/platform/graphics/Color.h
@@ -116,7 +116,7 @@ public:
     void setRGB(RGBA32 rgb) { m_color = rgb; m_valid = true; }
     WEBCORE_EXPORT void getRGBA(float& r, float& g, float& b, float& a) const;
     WEBCORE_EXPORT void getRGBA(double& r, double& g, double& b, double& a) const;
-    void getHSL(double& h, double& s, double& l) const;
+    WEBCORE_EXPORT void getHSL(double& h, double& s, double& l) const;
 
     Color light() const;
     Color dark() const;
